# openastro-1

./: .gitignore  CMakeLists.txt  Makefile.am  cm_config.h.in  config_stuff_still_missing  configure.ac
cmake/: TargetArch.cmake
conf4Rurwa/: config.h  defines.awk  subs.awk
ext/: CMakeLists.txt
ext/libuvc/: CMakeLists.txt
include/: cm_config.h  config.h  oa_common.h
lib/: CMakeLists.txt
lib/firmware/: CMakeLists.txt
liboacam/: CMakeLists.txt
liboacam/altair/: CMakeLists.txt
liboacam/altair-legacy/: CMakeLists.txt
liboacam/demo/: CMakeLists.txt
liboacam/dummy/: CMakeLists.txt
liboacam/euvc/: CMakeLists.txt
liboacam/flycap2/: CMakeLists.txt
liboacam/gphoto2/: CMakeLists.txt
liboacam/iidc/: CMakeLists.txt
liboacam/mallincam/: CMakeLists.txt
liboacam/meadecam/: CMakeLists.txt
liboacam/omegonpro/: CMakeLists.txt
liboacam/pwc/: CMakeLists.txt
liboacam/qhy/: CMakeLists.txt
liboacam/qhyccd/: CMakeLists.txt
liboacam/risingcam/: CMakeLists.txt
liboacam/starshootg/: CMakeLists.txt
liboacam/sx/: CMakeLists.txt
liboacam/toupcam/: CMakeLists.txt
liboacam/uvc/: CMakeLists.txt
liboacam/v4l2/: CMakeLists.txt
liboacam/zwo/: CMakeLists.txt
liboafilterwheel/: CMakeLists.txt
liboautil/: CMakeLists.txt
liboavideo/: CMakeLists.txt
packagers/: CMakeLists.txt
packagers/deb/: CMakeLists.txt
